--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 html {
-    font-family: arial, sans-serif;
+    font-family: arial, sans-serif !important;
+    overflow: hidden;
 }
 
 a {
     text-decoration: none;
-    color: rgba(0,0,0,0.87);
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 header {
@@ -16,9 +21,9 @@ header {
     align-content: center;
     justify-content: space-evenly;
     width: 273px;
-    height:30px;
+    height: 30px;
     position: relative;
-    margin-top:8px;
+    margin-top: 8px;
 }
 
 .roundedbutton {
@@ -26,17 +31,28 @@ header {
     border: 1px solid #f2f2f2;
     border-radius: 2px;
     white-space: nowrap;
-    line-height:28px;
-    padding:0 12px;
-    border-right-width:1px;
-    font-size: 13px;
+}
+
+.roundedbutton:focus {
+    border: 1px solid #4d90fe;
+    outline: none;
 }
 
 #signin {
     color: white;
-    background: #4387fd;
+    background-color: #4387fd;
     border: 1px solid #4285f4;
     font-weight: bold;
+    line-height: 28px;
+    padding: 0 12px;
+    border-right-width: 1px;
+    font-size: 13px;
+}
+
+#signin:active {
+    box-shadow: inset 0 2px 0 rgba(0, 0, 0, .15);
+    background-color:#3f76d3;
+
 }
 
 #trayicon {
@@ -55,9 +71,19 @@ header {
     height: 16px;
     background-color: transparent;
     border: none;
-    padding:0 0;
-    margin-top:7px;
+    padding: 0 0;
+    margin-top: 7px;
     margin-left: 2px;
+}
+
+#trayiconbutton:hover {
+    cursor: pointer;
+}
+#trayiconbutton:focus{
+    outline:none;
+}
+#trayiconbutton:hover .graybox {
+    background-color: black;
 }
 
 .graybox {
@@ -66,12 +92,158 @@ header {
     width: 100%;
 }
 
-.hlink{
-    padding-top:3px;
+.hlink {
+    padding-top: 3px;
     margin-right: -2px;
 }
 
-.Gmail{
-    padding-left:8px;
-    margin-right:-6px;
+.Gmail {
+    padding-left: 8px;
+    margin-right: -6px;
 }
+
+#centergrid {
+    position: absolute;
+    display: flex;
+    left: 0;
+    top: 50px;
+    width: 100%;
+    height: auto;
+    flex-flow: column;
+    align-items: center;
+    flex: 1 1 auto;
+}
+
+#searchbar {
+    height: 44px;
+    width: 582px !important;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+    margin-top: 27px;
+}
+
+#searchbar:hover {
+    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+    border-color: rgba(223, 225, 229, 0);
+}
+
+#searchbar-input {
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    line-height: 34px;
+    padding: 0;
+    height: 34px;
+    /*flex: 1, 1, 485px;*/
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 485px;
+}
+
+.search-icon {
+    flex: 0 0 auto;
+    width: 14px;
+    height: auto;
+}
+
+.icon-div {
+    width: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#searchbar-input:focus {
+    outline: none;
+}
+
+footer {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    line-height: 40px;
+    background: #f2f2f2;
+    width: 100%;
+    left: 0;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+#gray {
+    color: rgb(95, 99, 104);
+}
+
+.left>a {
+    padding-left: 23px;
+}
+
+.right>a {
+    padding-right: 23px;
+}
+
+.left {
+    padding-left: 7px;
+}
+
+.right {
+    padding-right: 7px;
+}
+
+#logo {
+    width: 272px;
+    height: auto;
+    flex-basis: auto 272px;
+    flex-grow: 0;
+    margin-top: 148px;
+}
+
+#buttons {
+    width: auto;
+    height: auto;
+    margin-top: 18px;
+}
+
+#buttons>button:hover:not(:focus) {
+    border: 1px solid #c6c6c6;
+    color: #222;
+    cursor: pointer;
+}
+
+#buttons>button {
+    border-radius: 4px;
+}
+
+.search-button {
+    line-height: 27px;
+    font-size: 14px;
+    padding: 0 16px 0 16px;
+    color: rgb(95, 99, 104);
+    height: 36px;
+    margin: 11px 4px 11px 4px;
+}
+
+.hoverable:hover {
+    cursor: pointer;
+}
+
+/*
+
+.center{
+    display:inline-block;
+    margin:auto;
+}
+
+
+
+.buttons{
+    width:auto;
+}
+
+div{
+    width:50px;
+}
+*/
